<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SignUpForm</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ok_button">OK</string>
    <string name="submit_button">Submit</string>
    <string name="cancel_button">Cacnel</string>
    <string name="username">Username</string>
    <string name="username_hint">Please enter your username</string>
    <string name="password">Password</string>
    <string name="password_hint">Please enter your password</string>
    <string name="email">Email</string>
    <string name="email_hint">Please enter your email</string>

</resources>
