<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="16dp"
    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/form_layout"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username_field"
            >

            <TextView
                android:text="@string/username"
                android:layout_weight="25"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_weight="75"
                android:hint="@string/username_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_field"
            >
            <TextView
                android:text="@string/email"
                android:layout_weight="25"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_weight="75"
                android:hint="@string/email_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_field"
            >
            
            <TextView
                android:text="@string/password"
                android:layout_weight="25"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_weight="75"
                android:hint="@string/password_hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:layout_below="@id/form_layout"
        android:layout_alignRight="@id/form_layout"
        android:layout_alignEnd="@id/form_layout"
        android:text="@string/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

</RelativeLayout>
